[gd_scene load_steps=7 format=3 uid="uid://dr80xaun1gn0f"]

[ext_resource type="Script" uid="uid://m075yjt0yh4b" path="res://Scripts/results_window.gd" id="1_2siik"]
[ext_resource type="Texture2D" uid="uid://btt06g8tp2x3x" path="res://Assets/Menu/Wooden-Window-01.png" id="1_rxrn7"]
[ext_resource type="Texture2D" uid="uid://b5vnqxcq3gvcp" path="res://Assets/Custom/HorseFaceWhite-removebg-preview.png" id="2_h0k7u"]
[ext_resource type="Texture2D" uid="uid://b3devvvvp0fl4" path="res://Assets/Custom/first_trophy.png" id="3_2siik"]
[ext_resource type="Texture2D" uid="uid://b6muh3174gm76" path="res://Assets/Custom/second_trophy.png" id="4_fnmyy"]
[ext_resource type="Texture2D" uid="uid://7gru8ixblbka" path="res://Assets/Custom/third_trophy.png" id="5_38kom"]

[node name="ResultsWindow" type="Control"]
layout_mode = 3
anchor_left = -1.4130001
anchor_top = -1.5530001
anchor_right = 1.4330001
anchor_bottom = 1.5300001
offset_left = 1627.7761
offset_top = 1006.34406
offset_right = -1650.8162
offset_bottom = -991.44006
script = ExtResource("1_2siik")

[node name="WoodenWindow01" type="Sprite2D" parent="."]
position = Vector2(1, 0)
scale = Vector2(4, 4)
texture = ExtResource("1_rxrn7")

[node name="FirstPlaceHorse" type="Sprite2D" parent="."]
position = Vector2(-784.3202, -465.7201)
scale = Vector2(9.915, 9.915)
texture = ExtResource("2_h0k7u")

[node name="SecondPlaceHorse" type="Sprite2D" parent="."]
position = Vector2(-795.8926, 127.400024)
scale = Vector2(5.7, 5.7)
texture = ExtResource("2_h0k7u")

[node name="ThirdPlaceHorse" type="Sprite2D" parent="."]
position = Vector2(-774.135, 574.4)
scale = Vector2(5.7, 5.7)
texture = ExtResource("2_h0k7u")

[node name="FirstTrophy" type="Sprite2D" parent="."]
position = Vector2(-1304.3202, -404.71997)
scale = Vector2(2.32, 2.32)
texture = ExtResource("3_2siik")

[node name="SecondTrophy" type="Sprite2D" parent="."]
position = Vector2(-1119.8926, 145.40002)
scale = Vector2(1.495, 1.495)
texture = ExtResource("4_fnmyy")

[node name="ThirdTrophy" type="Sprite2D" parent="."]
position = Vector2(-1114.135, 612.4)
scale = Vector2(1.495, 1.495)
texture = ExtResource("5_38kom")

[node name="ResultsTitle" type="Label" parent="."]
layout_mode = 0
offset_left = -650.0
offset_top = -970.0
offset_right = 701.0
offset_bottom = -790.0
theme_override_font_sizes/font_size = 131

[node name="FirstLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -419.0
offset_top = -781.0
offset_right = 1676.0
offset_bottom = 96.0
theme_override_font_sizes/font_size = 260
vertical_alignment = 1
autowrap_mode = 2

[node name="SecondLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -558.0
offset_top = 48.0
offset_right = 241.0
offset_bottom = 338.0
theme_override_font_sizes/font_size = 211

[node name="ThirdLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -535.0
offset_top = 490.0
offset_right = 264.0
offset_bottom = 780.0
theme_override_font_sizes/font_size = 211
